@@ -83,6 +83,8 @@ Changes in Bitbake 1.9.x:
 	- Disable task number acceleration since it can allow the tasks to run 
 	  out of sequence
 	- Improve runqueue code comments
+	- Add task scheduler abstraction and some example schedulers
+	- Improve circular dependency chain debugging code and user feedback
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
